--- a/index.html
+++ b/index.html
@@ -1,24 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Business Casual Template for Bootstrap</title>
 
-    <!-- Bootstrap core CSS -->
+    <title>Katherine Michel: Gingham Bistro</title>
+    
+    <!--Based on Start Bootstrap Business Casual-->
+
     <link href="css/bootstrap.css" rel="stylesheet">
-
-    <!-- Add custom CSS here -->
     <link href="css/business-casual.css" rel="stylesheet">
 </head>
 
 <body>
 
-    <div class="brand">Business Casual</div>
+    <div class="brand">Gingham Bistro</div>
     <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
 
     <nav class="navbar navbar-default" role="navigation">
@@ -135,7 +136,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>Copyright &copy; Company 2013</p>
+                    <p>&copy; Katherine Michel 2014</p>
                 </div>
             </div>
         </div>
