--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 
-
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-
     <title>Katherine Michel: Gingham Bistro</title>
     
     <!--Based on Start Bootstrap Business Casual-->
 
     <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/gingham-bistro.css" rel="stylesheet">
     <link href="css/business-casual.css" rel="stylesheet">
 </head>
 
