--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                         <small>Welcome to</small>
                     </h2>
                     <h1>
-                        <span class="brand-name">Gingham Bistro</span>
+                        <span class="brand-name">The Gingham Bistro Website</span>
                     </h1>
                     <hr class="tagline-divider">
                     <h2>
