--- a/location.html
+++ b/location.html
@@ -39,9 +39,9 @@
                     </li>
                     <li><a href="about.html">About</a>
                     </li>
-                    <li><a href="blog.html">Blog</a>
+                    <li><a href="news.html">News</a>
                     </li>
-                    <li><a href="contact.html">Contact</a>
+                    <li><a href="location.html">Location</a>
                     </li>
                 </ul>
             </div>
