--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 
     <div class="brand">Gingham Bistro</div>
-    <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
+    <div class="address-bar">5555 Bordeaux Street | Florence, South Carolina 29501 | 555.555.5555</div>
 
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Gingham Bistro</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
