--- a/about.html
+++ b/about.html
@@ -17,9 +17,9 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
-
+    <div class="brand">Gingham Bistro</div>
+    <div class="address-bar">5555 Bordeaux Street | Florence, South Carolina 29501 | 555.555.5555</div>
+    
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Gingham Bistro</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -56,7 +56,7 @@
             <div class="box">
                 <div class="col-lg-12">
                     <hr>
-                    <h2 class="intro-text text-center">About <strong>business casual</strong>
+                    <h2 class="intro-text text-center">About <strong>Gingham Bistro</strong>
                     </h2>
                     <hr>
                 </div>
@@ -83,19 +83,19 @@
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>John Smith
-                        <small>Job Title</small>
+                        <small>Owner</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>John Smith
-                        <small>Job Title</small>
+                        <small>Manager</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>John Smith
-                        <small>Job Title</small>
+                        <small>Head Host</small>
                     </h3>
                 </div>
                 <div class="clearfix"></div>
