--- a/location.html
+++ b/location.html
@@ -17,9 +17,9 @@
 
 <body>
 
-    <div class="brand">Business Casual</div>
-    <div class="address-bar">The Plaza | 5483 Start Bootstrap Ave. | Beverly Hills, California 26892 | 555.519.2013</div>
-
+    <div class="brand">Gingham Bistro</div>
+    <div class="address-bar">5555 Bordeaux Street | Florence, South Carolina 29501 | 555.555.5555</div>
+    
     <nav class="navbar navbar-default" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -29,7 +29,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">Business Casual</a>
+                <a class="navbar-brand" href="index.html">Gingham Bistro</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -65,11 +65,11 @@
                     <iframe width="100%" height="400" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?hl=en&amp;ie=UTF8&amp;ll=37.0625,-95.677068&amp;spn=56.506174,79.013672&amp;t=m&amp;z=4&amp;output=embed"></iframe>
                 </div>
                 <div class="col-md-4">
-                    <p>Phone: <strong>555.519.2013</strong>
+                    <p>Phone: <strong>555.555.5555</strong>
                     </p>
-                    <p>Email: <strong>feedback@startbootstrap.com</strong>
+                    <p>Email: <strong>feedback@ginghambistro.com</strong>
                     </p>
-                    <p>Address: <strong>The Plaza<br>5483 Start Bootstrap Ave.<br>Beverley Hills, CA 26829</strong>
+                    <p>Address: <strong>5555 Bordeaux Street<br>Florence, South Carolina 29501</strong>
                     </p>
                 </div>
                 <div class="clearfix"></div>
