--- a/about.html
+++ b/about.html
@@ -83,13 +83,13 @@
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>John Smith
-                        <small>Owner</small>
+                        <small>Manager</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
                     <img class="img-responsive" src="http://placehold.it/750x450" alt="">
                     <h3>John Smith
-                        <small>Manager</small>
+                        <small>Chef</small>
                     </h3>
                 </div>
                 <div class="col-sm-4 text-center">
