--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/image6.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Gingham Bistro renews commit to exclusively use fresh, organic, locally sourced ingredients
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/image4.jpg" alt="">
-                    <h2>Post Title
+                    <h2>Gingham Bistro head chef announces new seasonal menu
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
@@ -82,7 +82,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/image8.jpg" alt="">
-                    <h2>Post Title
+                    <h2>New labels added to Gingham Bistro wine list handchosen by Master Sommelier
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
