--- a/location.html
+++ b/location.html
@@ -67,7 +67,7 @@
                 <div class="col-md-4">
                     <p>Phone: <strong>555.555.5555</strong>
                     </p>
-                    <p>Email: <strong>feedback@ginghambistro.com</strong>
+                    <p>Email: <strong>contact@ginghambistro.com</strong>
                     </p>
                     <p>Address: <strong>5555 Bordeaux Street<br>Florence, South Carolina 29501</strong>
                     </p>
