--- a/news.html
+++ b/news.html
@@ -72,7 +72,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/image4.jpg" alt="">
-                    <h2>Gingham Bistro head chef announces new seasonal menu
+                    <h2>Gingham Bistro Head Chef announces new seasonal menu
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
