--- a/news.html
+++ b/news.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-lg-12 text-center">
                     <img class="img-responsive img-border img-full" src="img/image6.jpg" alt="">
-                    <h2>Gingham Bistro renews commit to exclusively use fresh, organic, locally sourced ingredients
+                    <h2>Gingham Bistro renews commitment to exclusively use fresh, organic, locally sourced ingredients
                         <br>
                         <small>October 13, 2013</small>
                     </h2>
