--- a/location.html
+++ b/location.html
@@ -83,7 +83,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <p>&copy; Katherine Michel 2014</p>
+                    <p>&copy; Katherine Michel 2014-2016</p>
                 </div>
             </div>
         </div>
