--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
                         <!-- Wrapper for slides -->
                         <div class="carousel-inner">
                             <div class="item active">
-                                <img class="img-responsive img-full" src="img/image2.jpg" alt="">
+                                <img class="img-responsive img-full" src="images/image2.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/image3.jpg" alt="">
+                                <img class="img-responsive img-full" src="images/image3.jpg" alt="">
                             </div>
                             <div class="item">
-                                <img class="img-responsive img-full" src="img/image4.jpg" alt="">
+                                <img class="img-responsive img-full" src="images/image4.jpg" alt="">
                             </div>
                         </div>
 
