--- a/news.html
+++ b/news.html
@@ -61,7 +61,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/image6.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="images/image6.jpg" alt="">
                     <h2>Gingham Bistro renews commitment to exclusively use fresh, organic, locally sourced ingredients
                         <br>
                         <small>October 13, 2013</small>
@@ -71,7 +71,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/image7.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="images/image7.jpg" alt="">
                     <h2>Gingham Bistro Head Chef announces new seasonal menu
                         <br>
                         <small>October 13, 2013</small>
@@ -81,7 +81,7 @@
                     <hr>
                 </div>
                 <div class="col-lg-12 text-center">
-                    <img class="img-responsive img-border img-full" src="img/image8.jpg" alt="">
+                    <img class="img-responsive img-border img-full" src="images/image8.jpg" alt="">
                     <h2>New labels added to Gingham Bistro wine list handchosen by Master Sommelier
                         <br>
                         <small>October 13, 2013</small>
